Added in new macros to configure MPFS buiild correctly

--- a/boards/riscv/mpfs_icicle/mpfs_icicle_defconfig
+++ b/boards/riscv/mpfs_icicle/mpfs_icicle_defconfig
@@ -22,9 +22,15 @@ CONFIG_XIP=n
 CONFIG_INIT_STACKS=y
 CONFIG_SMP=y
 CONFIG_MP_NUM_CPUS=4
-
+CONFIG_SMP_BASE_CPU=1
 # Workaround for incorect SYS_CLOCK_HW_CYCLES_PER_SEC
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
 # CONFIG_SYS_CLOCK_TICKS_PER_SEC=150000000
 CONFIG_BOARD_USE_DDR=n
-
+CONFIG_HAS_MONITOR_HART=y
+# Do this for now as some early versions of the HSS can leave the
+# PMP registers un-configured.
+CONFIG_CLEAR_PMP_REGS=y
+# Steer clear of e51
+CONFIG_HART_TO_USE=1
+CONFIG_SET_SUPERVISOR_HANDLER=y
