Added CONFIG_MP_TOTAL_CPUS to account for both zephyr and non Zephyr CPUs in system

--- a/boards/riscv/mpfs_icicle/mpfs_icicle_defconfig
+++ b/boards/riscv/mpfs_icicle/mpfs_icicle_defconfig
@@ -22,6 +22,7 @@ CONFIG_XIP=n
 CONFIG_INIT_STACKS=y
 CONFIG_SMP=y
 CONFIG_MP_NUM_CPUS=4
+CONFIG_MP_TOTAL_NUM_CPUS=5
 CONFIG_SMP_BASE_CPU=1
 # Workaround for incorect SYS_CLOCK_HW_CYCLES_PER_SEC
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
