Changed architecture to include FD, probably needs overlay or other mechanism to allow selection at build time but this is problematic as the DTSI stuff seems to get done at an earlier stage in the build so I'm not sure how to do it without overlays.

--- a/dts/riscv/mpfs-icicle.dtsi
+++ b/dts/riscv/mpfs-icicle.dtsi
@@ -16,7 +16,8 @@
 			compatible = "microsemi,miv", "riscv";
 			device_type = "cpu";
 			reg = < 0x00 >;
-			riscv,isa = "rv64imac";
+/*			riscv,isa = "rv64imac"; */
+			riscv,isa = "rv64imafdc";
 			hlic: interrupt-controller {
 				#interrupt-cells = <1>;
 				compatible = "riscv,cpu-intc";
