Enable shared FPU support

--- a/boards/riscv/mpfs_icicle/mpfs_icicle_defconfig
+++ b/boards/riscv/mpfs_icicle/mpfs_icicle_defconfig
@@ -3,8 +3,8 @@
 CONFIG_SOC_SERIES_RISCV64_MIV=y
 CONFIG_SOC_MPFS=y
 CONFIG_BASE64=y
-# CONFIG_FPU=y
-# CONFIG_FPU_SHARING=y
+CONFIG_FPU=y
+CONFIG_FPU_SHARING=y
 CONFIG_BOARD_MPFS_ICICLE=y
 CONFIG_NO_OPTIMIZATIONS=y
 CONFIG_CONSOLE=y
